# python-data-template

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 001. 梯度下降.ipynb
src/utils/: maths.py  plot_ext.py
tests/utils/: test_maths.py
