[project]
name = "python-data-template"
version = "0.1.0"
description = "用于做数据分析、算法、机器学习等实验的python模板。"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.12",
    "ty>=0.0.1a20",
]

[tool.ruff]
line-length = 120
fix = true

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }
